# fastapi_skeleton

./: .gitignore  Dockerfile  README.md  docker-run.sh  main.py  pyproject.toml
app/: main.py
app/api/v1/: api.py  article.py  user.py
app/core/: config.py  jwt.py  util.py
app/crud/: article.py  shortcuts.py  tag.py  user.py
app/db/: mongodb_util.py
app/depends/: header.py
app/model/: article.py  profile.py  rwmodel.py  tag.py  user.py
app/routers/: items.py  users.py
app/scheduler/: collect.py
app/tests/: conftest.py  test_main.py
app/tests/api/: test_article.py
