[tool.poetry]
name = "ranker_fastapi"
version = "0.1.0"
description = ""
authors = ["John <john@buzzni.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.42.0"
uvicorn = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
