[tool.poetry]
name = "ranker_fastapi"
version = "0.1.0"
description = ""
authors = ["John <john@buzzni.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.42.0"
uvicorn = "^0.10.2"
motor = "^2.1"
bcrypt = "^3.1"
passlib = "^1.7"
python-dotenv = "^0.10.3"
databases = "^0.2.6"
pydantic = "0.32.2"
email-validator = "^1.0"
gunicorn = "^20.0"
pytest = "^5.3"
requests = "^2.22"
jwt = "^0.6.1"
PyJWT = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
